Fix word-wrap for Chrome in AboutMeWxamples.

--- a/src/components/AboutMe/AboutMeExamples/AboutMeExamples.scss
+++ b/src/components/AboutMe/AboutMeExamples/AboutMeExamples.scss
@@ -26,6 +26,7 @@
     }
     .aboutme-examples-description {
         padding: 5px 10px 10px;
+        word-wrap: break-word;
     }
     .aboutme-examples-textsourcecode {
         font-weight: 800;
